<resources>
    <string name="app_name">Smart Retailer</string>
    <string name="confirm">Confirm</string>
    <string name="btn_add_product_text">Add Product</string>
    <string name="btn_view_all_products_text">View All Products</string>
    <string name="btn_view_all_transactions_text">View All Transactions</string>
    <string name="et_product_id_hint">Enter Product Id</string>
    <string name="et_product_name_hint">Enter Product Name</string>
    <string name="enabling_bluetooth">Enabling Bluetooth..</string>
    <string name="et_product_price_hint">Enter Product Price</string>
    <string name="et_product_discount_hint">Enter Product Discount</string>
    <string name="btn_save_product_text">Save Product</string>
    <string name="alert_all_fields_not_filled">Make sure all the fileds are filled</string>
    <string name="et_search_product_hint">Enter product name to search</string>
    <string name="tv_product_name_hint">Product Name:</string>
    <string name="tv_product_id_hint">Product Id:</string>
    <string name="tv_product_currency_hint">Currency:</string>
    <string name="tv_product_price_hint">Price:</string>
    <string name="tv_product_discount_hint">Discount</string>
    <string name="product_saved_text">Product saved successfully</string>
    <string name="btn_add_bt_scanner_text">Add Bluetooth Scanner</string>
    <string name="bt_not_available">Bluetooth Not Available</string>
    <string name="bt_not_enabled">Bluetooth not enabled, Please enable your Bluetooth</string>
    <string name="scanner_not_added_title">Scanner not added</string>
    <string name="scanner_not_added_content">Click here to add Scanner</string>
    <string name="connection_failed">Failed to establish connection with the scanner</string>
    <string name="connection_disconnected">scanner disconnected</string>
    <string name="connection_successful">scanner connected successfully</string>
    <string name="tv_transaction_text">Transaction Id:</string>
    <string name="tv_datentime_text">Date And Time:</string>
    <string name="tv_total_amount_text">Total Amount:</string>
    <string name="tv_is_paid_text">Payment Status:</string>
    <string name="no_bluetooth_support">Your device doesn\'t support bluetooth.</string>
    <string name="please_wait">please wait...</string>
    <string name="rs">\u20B9</string>
    <string name="paid">Paid</string>
    <string name="pending">Pending</string>
    <string name="tv_transaction_id">Transaction Id:</string>
    <string name="trying_to_connect">Connecting..</string>
    <string name="list_items">Listn Of Items</string>
    <string name="connecting_scanner">CONNECTING TO SCANNER...</string>
</resources>
