<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nowfloats.smartretailer.Activities.MainActivity">

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_product_text"/>
    <Button
        android:id="@+id/btnViewAllProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_all_products_text"/>
    <Button
        android:id="@+id/btnViewAllTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_all_transactions_text"/>
    <Button
        android:id="@+id/btnAddBtScanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_bt_scanner_text"/>
</LinearLayout>
