<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nowfloats.smartretailer.Activities.AddProductActivity">
    <EditText
        android:id="@+id/etProductId"
        android:paddingLeft="@dimen/et_padding_left"
        android:hint="@string/et_product_id_hint"
        android:background="@drawable/et_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <EditText
        android:id="@+id/etProductName"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/et_padding_left"
        android:hint="@string/et_product_name_hint"
        android:background="@drawable/et_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <EditText
        android:id="@+id/etProductPrice"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/et_padding_left"
        android:hint="@string/et_product_price_hint"
        android:inputType="numberDecimal"
        android:background="@drawable/et_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <EditText
        android:id="@+id/etProductDiscount"
        android:layout_marginTop="20dp"
        android:paddingLeft="@dimen/et_padding_left"
        android:hint="@string/et_product_discount_hint"
        android:inputType="numberDecimal"
        android:background="@drawable/et_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btnProductSave"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_product_text"/>


</LinearLayout>
